# wasi

./: .gitignore  Cargo.toml  Makefile  next.config.js  readme.md
crates/wasi-basic-triangle/: Cargo.toml  README.md
crates/wasi-basic-triangle/src/: lib.rs
crates/wasi-basic-triangle/wit/: deps.toml  example.wit
crates/wasi-etch-tsx/: Cargo.toml
crates/wasi-etch-tsx/src/: lib.rs
crates/wasi-etch-tsx/wit/: world.wit
crates/wasi-markdown/: Cargo.toml  readme.md
crates/wasi-markdown/src/: lib.rs
crates/wasi-markdown/wit/: world.wit
runtime/deno/: main.ts
www/: next.config.ts  package-lock.json  package.json
www/src/app/: layout.tsx  styles.css
www/src/app/markdown/: markdown.tsx  page.tsx
www/src/app/triangle/: page.tsx  triangle.tsx
www/src/hooks/: index.ts  useWasiFunction.ts
www/src/pkg/mocks/: wasi-shim.js
