[package]
name = "wasi-markdown"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
wit-bindgen = { workspace = true }
pulldown-cmark = { version = "0.9.3", default-features = false }
syntect = { version = "5.0", default-features = false, features = ["default-fancy"] }
regex = "1.9.1"


[profile.release]
lto = true
opt-level = 's' # Optimize for size